fix: white space for inline code

--- a/nova-components/PostEditor/resources/sass/prism-solarizedlight.css
+++ b/nova-components/PostEditor/resources/sass/prism-solarizedlight.css
@@ -82,6 +82,7 @@ pre {
 :not(pre)>code {
   padding: .1em;
   border-radius: .3em;
+  white-space : pre-wrap;
 }
 
 .token.comment,
